--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "ng2-uploader": "^1.2.0",
+    "ng2-bootstrap": "^1.1.6",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
