--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings"
+    "typings": "typings",
+    "electron": "tsc && concurrently \"electron electron.js\" \"lite-server\"  "
   },
   "license": "ISC",
   "dependencies": {
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
+    "electron": "^1.4.4",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
     "typings": "^1.4.0"
